# rustbolt

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  ChrRaces.dbc  README.md  config.template.toml
.claude/: settings.json
auth/: Cargo.toml
auth/src/: config.rs  lib.rs  main.rs  packets.rs
shared/: Cargo.toml
shared/src/: lib.rs
shared/src/models/: loot.rs  terrain_info.rs  wmo.rs
shared/src/repositories/: error.rs  loot.rs
shared/src/utils/: value_range.rs
sql_migrations/auth/: V1__add_realms.sql  V2__add_accounts.sql
sql_migrations/characters/: V10__add_character_reputations.sql  V11__add_character_quest_statuses.sql  V12__add_character_quests_entity_count.sql  V13__add_character_current_health.sql  V14__add_character_experience.sql  V15__add_character_money.sql  V16__add_character_current_powers.sql  V17__add_character_bindpoint.sql  V18__add_character_spell_cooldowns.sql  V19__add_character_action_bar_toggles.sql  V1__add_characters.sql  V2__characters_rename_id_to_guid.sql  V3__characters_add_level.sql  V4__character_add_inventory_and_items.sql  V5__characters_add_position.sql  V6__items_add_stack_count.sql  V7__add_character_spells.sql  V8__add_character_skills.sql  V9__add_character_action_buttons.sql
sql_migrations/world/: V10__creature_templates_add_flags.sql  V10__remove_tar_pedestal_spawns.sql  V11__add_quest_templates.sql  V14__add_quest_relations.sql  V15__add_npc_text.sql  V15__fix_creature_templates_flags.sql  V16__add_gossip_menu_and_options.sql  V18__add_creature_template_gossip_menu_id.sql  V18__add_creature_templates_movement_type.sql  V20__fix_creature_spawns_movement_type.sql  V22__add_creature_model_info.sql  V22__add_player_stats.sql  V23__fix_player_attributes_col_name.sql  V25__add_creature_templates_melee_speed_dmg.sql  V25__add_creature_templates_unit_class.sql  V26__add_creature_base_attributes_per_level.sql  V27__remove_creature_templates_health_mana.sql  V28__add_creature_template_multipliers.sql  V29__add_creature_templates_base_variance.sql  V2__add_player_create_positions.sql  V30__add_player_experience_per_level.sql  V31__add_creature_templates_gold_loot.sql  (+24 more)
src/: lib.rs  main.rs  packets.rs
tools/minimap_extractor/: Cargo.toml
tools/minimap_extractor/src/: lib.rs  main.rs
tools/minimap_extractor/src/models/: bounds.rs  minimap.rs  tile_info.rs
tools/shared/: Cargo.toml
tools/shared/src/: lib.rs  models.rs
tools/shared/src/utils/: mpq.rs
tools/terrain_extractor/: Cargo.toml
tools/terrain_extractor/src/: lib.rs  main.rs
tools/terrain_extractor/src/models/: file_chunk.rs
tools/terrain_extractor/src/models/file_chunk/: adt.rs  chunks.rs  wdt.rs  wmo.rs
tools/terrain_extractor/src/models/file_chunk/adt/: chunks.rs
tools/terrain_extractor/src/models/file_chunk/wdt/: chunks.rs
tools/terrain_extractor/src/models/file_chunk/wmo/: chunks.rs
web_proxy/: Cargo.toml
web_proxy/src/: lib.rs  main.rs
web_proxy/src/controllers/: loot_tables.rs  spawns.rs
web_proxy/src/repositories/: creature.rs  game_object.rs  loot.rs  spawns.rs  wowhead_cache.rs
web_proxy/src/services/: loot.rs
web_proxy/src/wowhead/: models.rs  service.rs
world/: Cargo.toml
world/opcode_derive/: Cargo.toml
world/opcode_derive/src/: lib.rs
world/src/: chat_commands.rs  config.rs  constants.rs  database_context.rs  datastore.rs  entities.rs  game.rs  lib.rs  main.rs  packets.rs  protocol.rs  repositories.rs  session.rs  session_holder.rs  shared.rs  world_context.rs  world_session.rs  world_socket.rs
world/src/chat_commands/: debug.rs  movement.rs
world/src/datastore/: data_types.rs  dbc.rs
world/src/ecs/: components.rs  resources.rs  systems.rs
world/src/ecs/components/: applied_auras.rs  behavior.rs  cooldowns.rs  guid.rs  health.rs  melee.rs  movement.rs  nearby_players.rs  powers.rs  quest_actor.rs  spell_cast.rs  threat_list.rs  unit.rs  unwind.rs  world_object.rs
world/src/ecs/systems/: aura.rs  behavior.rs  combat.rs  cooldown.rs  death.rs  inventory.rs  melee.rs  movement.rs  packets.rs  powers.rs  spell.rs  unwind.rs  updates.rs
world/src/entities/: attribute_modifiers.rs  attributes.rs  behaviors.rs  creature.rs  entity.rs  game_object.rs  internal_values.rs  item.rs  object_guid.rs  player.rs  position.rs  update.rs  update_fields.rs
world/src/entities/player/: combat.rs  experience.rs  inventory.rs  movement.rs  player_data.rs  player_inventory.rs  powers.rs  quests.rs  spells.rs  stats.rs
world/src/game/: aura.rs  aura_effect_handler.rs  entity_manager.rs  experience.rs  gossip.rs  loot.rs  map.rs  map_manager.rs  movement_spline.rs  packet_broadcaster.rs  packet_queue.rs  quad_tree.rs  spatial_grid.rs  spatial_index.rs  spell.rs  spell_cast_target.rs  spell_effect_handler.rs  spell_effect_handlers.rs  terrain_manager.rs  value_range.rs  world.rs  world_context.rs
world/src/game/aura_effect_handler/: stats.rs
world/src/game/spell_effect_handler/: aura.rs  combat.rs  misc.rs
world/src/game/spell_effect_handlers/: misc.rs
world/src/protocol/: client.rs  handlers.rs  opcodes.rs  packets.rs  server.rs
world/src/protocol/handlers/: account_handlers.rs  character_handlers.rs  chat_handlers.rs  combat_handlers.rs  gossip_handlers.rs  item_handlers.rs  loot_handlers.rs  misc_handlers.rs  movement_handlers.rs  query_handlers.rs  quest_handlers.rs  spell_handlers.rs  synchronization_handlers.rs
world/src/protocol/packets/: auth_packets.rs  char_list_packets.rs  chat_packets.rs  combat_packets.rs  entity_packets.rs  gossip_packets.rs  item_packets.rs  loot_packets.rs  misc_packets.rs  movement_packets.rs  player_packets.rs  query_packets.rs  quest_packets.rs  spell_packets.rs  trainer_packets.rs  vendor_packets.rs  zone_packets.rs
world/src/repositories/: account.rs  character.rs  creature.rs  creature_static_data.rs  game_object.rs  gossip.rs  item.rs  loot.rs  player_creation.rs  player_static_data.rs  quest.rs  text.rs
world/src/session/: opcode_handler.rs  session_holder.rs  world_session.rs  world_socket.rs
world/src/shared/: constants.rs  response_codes.rs
world/src/utils/: macros.rs
(+20 files in other folders)
