[workspace]
members = [
  "auth",
  "shared",
  "tools/cartographer",
  "tools/dbc_extractor",
  "tools/terrain_extractor",
  "tools/tools_shared",
  "world",
  "world/opcode_derive",
]

resolver = "2"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
