[workspace]
members = [
  "auth",
  "shared",
  "tools/cartographer",
  "tools/dbc_extractor",
  "tools/minimap_extractor",
  "tools/terrain_extractor",
  "tools/tools_shared",
  "web_proxy",
  "world",
  "world/opcode_derive",
]

resolver = "2"

# Create a profiling cargo profile for use with samply (https://github.com/mstange/samply)
[profile.profiling]
inherits = "release"
debug = true

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
