[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binrw = "0.11.1"
enumflags2 = { version = "0.7.5", features = ["serde" ] }
enumn = "0.1.8"
fixedbitset = "0.4.2"
parry3d = "0.13.5"
splines = "4.2.0"
