[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binrw = "0.11.1"
enumflags2 = { version = "0.7.5", features = ["serde"] }
enumn = "0.1.8"
fixedbitset = "0.4.2"
indicatif = "0.17.3"
parry3d = "0.13.5"
r2d2 = "0.8.10"
r2d2_sqlite = "0.21.0"
rand = "0.8.5"
rusqlite = { version = "0.28.0", features = ["bundled"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
splines = "4.2.0"
