[package]
name = "web_proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
headless_chrome = { git = "https://github.com/rust-headless-chrome/rust-headless-chrome", features = [
  "fetch",
] }
r2d2 = "0.8.10"
r2d2_sqlite = "0.21.0"
refinery = { version = "0.8", features = ["rusqlite"] }
regex = "1.10.6"
rusqlite = { version = "0.28.0", features = ["bundled"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
shared = { path = "../shared" }
table-extract = "0.2"
