[package]
name = "rustbolt-world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binrw = "0.11.1"
env_logger = "0.10.0"
hex = "0.4.3"
log = "0.4.17"
refinery = { version = "0.8", features = ["rusqlite"] }
rusqlite = { version = "0.28.0", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
wow_srp = { version = "0.5.3", features = ["tbc-header"] }
