[package]
name = "rustbolt-world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
atomic-counter = "1.0.1"
binrw = "0.11.1"
bytemuck = "1.3.1"
chrono = "0.4.24"
config = "0.13.3"
enumn = "0.1.8"
enumflags2 = "0.7.5"
env_logger = "0.10.0"
fixedbitset = "0.4.2"
futures = "0.3.27"
hex = "0.4.3"
indicatif = "0.17.3"
lazy_static = "1.4.0"
log = "0.4.17"
miniz_oxide = "0.7.1"
multimap = "0.9.0"
opcode_derive = { path = "./opcode_derive" }
parking_lot = "0.12.1"
r2d2 = "0.8.10"
r2d2_sqlite = "0.21.0"
rand = "0.8.5"
refinery = { version = "0.8", features = ["rusqlite"] }
rusqlite = { version = "0.28.0", features = ["bundled"] }
serde = "1.0.158"
shared = { path = "../shared" }
shipyard = { git = "https://github.com/leudz/shipyard" }
tokio = { version = "1", features = ["full"] }
wow_srp = { version = "0.5.3", features = ["tbc-header"] }
