[package]
name = "minimap_extractor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.0", features = ["derive"] }
image-blp = "1.2.0"
tokio = { version = "1", features = ["full"] }
tools_shared = { path = "../tools_shared" }
