[package]
name = "terrain_extractor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binrw = "0.11.1"
bytemuck = "1.13.1"
clap = { version = "4.2.0", features = ["derive"] }
downcast-rs = "1.2.0"
enumflags2 = { version = "0.7.5", features = ["serde" ] }
log = "0.4.17"
tools_shared = { path = "../tools_shared" }
